<resources>
    <string name="app_name">Login and SignUp</string>
    <string name="login_slash_text">Login and Registration Using Firebase Authentication…</string>
    <string name="app_dev">App Design and Develop By Sagar Dhadke</string>
    <string name="splash_screen_logo">Splash Screen Logo</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="email">Email</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in_txt">Sign In</string>
    <string name="already_have_account">Already Have Account?</string>


    <string name="sign_up">Sign up</string>
    <string name="todo">TODO</string>
    <string name="email_id">Email ID</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="full_name">Full name</string>
    <string name="telephone_number">Mobile</string>
    <string name="male">Male</string>
    <string name="register">Register</string>
    <string name="female">Female</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="by_signing_up_re_agree_to_oue">By signing up,You are agree to our</string>
    <string name="and">and</string>
    <string name="skip">Skip</string>
    <string name="privacy_policy">Privacy Policy</string>

</resources>